deploy/home_work_03/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: otus-homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otus-homework
  template:
    metadata:
      labels:
        app: otus-homework
    spec:
      containers:
      - name: app
        image: merlinus1/otus-ma-2023-12:v0.1.0
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
