deploy/home_work_03/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-homework-svc
spec:
  selector:
    app: otus-homework
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
